# cortex-desktop

./: .gitignore  CLAUDE.md  LICENSE  README.md  RELEASE_NOTES_0.16.md  RELEASE_NOTES_0.17.md  RELEASE_NOTES_0.18.md  RELEASE_NOTES_0.19.md  RELEASE_NOTES_0.20.md  RELEASE_NOTES_0.21.md  build.py  cortex_desktop.spec  installer.iss  pyproject.toml
.claude/: launch.json
.github/workflows/: build-release.yml
cortex_desktop/: __init__.py  __main__.py  app.py  config.py  tray.py  updater.py
cortex_local/: __init__.py  ingester.py  logging_setup.py
cortex_mcp/: __init__.py  __main__.py  bridge.py  cli.py  daemon.py  daemon_client.py  gateway.py  protocol.py  server.py  wifi_bridge.py
cortex_train/: __init__.py  __main__.py  cli.py  config.py  errors.py  formats.py  lmstudio.py  paths.py  pi_client.py  progress.py  prompts.py
cortex_train/steps/: __init__.py  deploy.py  dream.py  evaluate.py  prepare.py  sync.py  synthesize.py  train.py
docs/: CLOUD_MIGRATION.md  CLOUD_MIGRATION_DESKTOP_PREP.md  CORTEX_AGENT_PLAN.md  CORTEX_LINK_PHONE_BRIDGE.md  SYNC_CONTRACT_DRAFT.md
docs/team-mail/: README.md  TO_DESKTOP.md  TO_MOBILE.md
hub/backend/: config.py  main.py  requirements.txt
hub/backend/routers/: chat.py  data.py  games.py  intro.py  learning.py  lemon.py  overseer.py  pi.py  plugins.py  settings.py  training.py  transcribe.py  video.py  voice.py
hub/backend/services/: dataset_manager.py  learn_cycle.py  lemon_export.py  lmstudio.py  pi_client.py  plugin_manager.py  process_manager.py  video_overseer_bridge.py  voice_agent_manager.py
hub/frontend/: index.html  package-lock.json  package.json  vite.config.ts
hub/frontend/src/: App.tsx  index.css  main.tsx
hub/frontend/src/components/: DisplayEmulator.tsx  ErrorBoundary.tsx  Layout.tsx  PetWidget.tsx
hub/frontend/src/components/chat/: ChatInput.tsx  ChatPage.tsx  MessageBubble.tsx
hub/frontend/src/components/data/: DataEntryForm.tsx  DataPage.tsx  RecordEditor.tsx  TableBrowser.tsx
hub/frontend/src/components/games/: GamesPage.tsx  PongCanvas.tsx  (+1 more)
hub/frontend/src/hooks/: useChat.ts  useCloudMode.ts  useData.ts  useDreamCycle.ts  useInstalledPlugins.ts  usePi.ts  useTraining.ts  useVideoJob.ts  useVoiceMode.ts
hub/frontend/src/lib/: api.ts  time.ts  videoApi.ts
scripts/: build_whisper_cpp.py  index_videos.py  mine_video_journals.py
scripts/video-annotator/: db.js  package-lock.json  package.json  server.js
scripts/video-annotator/public/: app.js  index.html  style.css
scripts/video-annotator/scripts/: import-videos.js
tests/: conftest.py  test_config_unified.py  test_import_path.py  test_ingester_cp1.py  test_overseer_router.py  test_phone_bridge.py  test_pi_client.py  test_plugin_manager.py
training/: requirements.txt
training/config/: model_presets.json  settings.json
training/scripts/: 00_sync_data.py  01_synthesize_notes.py  02_prepare_dataset.py  03_train_pet.py  04_eval.py  05_autoresearch.py  06_export_deploy.py  07_learn_cycle.py  pong_train.py
voice_agent/: .gitignore  README.md  __init__.py  activity.py  bot.py  chats.py  config.py  cortex_api.py  requirements.txt  session.py  setup.py  subagent.py  tools.py  voice.local.toml.example  websearch.py
(+61 files in other folders)
