[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-desktop"
version = "0.17.0.dev7"
description = "Cortex Hub desktop application — system tray + browser UI"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "httpx>=0.25",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pystray>=0.19",
    "Pillow>=10.0",
    # MCP server dependencies
    "mcp>=1.0.0",
    "pyserial>=3.5",
    "click>=8.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0",
]
# Slice 7: local audio/video transcription for the human journal.
# Heavy (~2GB installed due to PyTorch). Optional so the base Hub
# stays light. Install with: pip install -e ".[voice]"
# Also requires ffmpeg on PATH (winget install ffmpeg, brew install
# ffmpeg, or apt install ffmpeg).
voice = [
    "openai-whisper>=20240930",
]

[project.scripts]
cortex-desktop = "cortex_desktop.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cortex_desktop*", "cortex_mcp*", "cortex_train*"]
