[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-desktop"
version = "0.19.0.dev2"
description = "Cortex Hub desktop application — system tray + browser UI"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "websockets>=12",
    "httpx>=0.25",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pystray>=0.19",
    "Pillow>=10.0",
    # MCP server dependencies
    "mcp>=1.0.0",
    "pyserial>=3.5",
    "click>=8.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0",
]
# Slice 7 CP2 (dev.9): voice transcription dropped its Python deps.
# whisper.cpp ships as a native binary built into the installer
# (see scripts/build_whisper_cpp.py + cortex_desktop.spec). The
# Hub backend invokes it via subprocess. ffmpeg is the only
# remaining external dependency — required for audio normalization.
# Install with: winget install ffmpeg / brew install ffmpeg /
# apt install ffmpeg.

[project.scripts]
cortex-desktop = "cortex_desktop.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cortex_desktop*", "cortex_mcp*", "cortex_train*"]
